@@ -21,6 +21,7 @@ AUTOTOOLS
 ==========
 http://en.wikipedia.org/wiki/GNU_Automake
 http://www.developingprogrammers.com/index.php/2006/01/05/autotools-tutorial/
+# Swich for realotp support: http://sourceware.org/autobook/autobook/autobook_283.html#SEC283
 
 SUBVERSION
 ===========
